TLM2008_Project/static/css/style.css
* {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
}

body{
        font-family: 'Poppins', sans-serif;
}

.navbar {
        display:flex;
        align-items: center;
        padding: 20px;
}

nav{
        flex: 1;
        text-align: right;
}
nav ul{
        display: inline-block;
        list-style-type: none;

}
nav ul li{
        display: inline-block;
        margin-right: 20px;
}
/* anchor */
a{
        text-decoration: none;
        color: #555;
}
/* paragraphing */
p{
        color: #555;

}

.container{
        max-width: 1300px;
        margin: auto;
        padding-left: 25px;
        padding-right: 25px;
}
.row{
    display:flex;
    align-items:center;
    flex-wrap: wrap;
    justify-content: space-around;
}
.col-2{
    flex-basis: 50%;
    min-width: 25%;

}
.description{
    margin-left: 30%;
}
.carousel{
    width: 200%;
    margin-left: 50%;
}
#slider{
    margin-right:90%;
}
.col-2 img{
    width: 200%;

}

.col-2 h1{
    font-size: 50px;
    line-height: 60px;
    margin: 25px 0;

}

.btn{
    display: inline-block;
    background: #ff523b;
    color: #fff;
    padding: 8px 30px;
    margin: 30px 0;
    border-radius: 30px;
    transition: background 0.5s;
}

.btn:hover{
    background: #563434;
}
.header{
    background: radial-gradient(#fff, #ffd6d6);

}
.header row{
    margin-top: 70px;

}
.categories{
    margin: 70px 0;
}
.col-3{
    flex-basis: 30%;
    min-width: 250px;
    margin-bottom: 30px;
}

.col-3 img{
    width: 100%;
}
.small-container{
    max-width: 1080px;
    margin: auto;
    padding-left: 25px;
    padding-right: 25px;
}

.col-4{
    flex-basis: 25%;
    padding: 10px;
    min-width: 200px;
    margin-bottom: 50px;
    transition: transform 1.5s;
}
.col-4 img{
    width: 100%;
}
.title{
    text-align: center;
    margin: 0 auto 80px;
    position: relative;
    line-height: 60px;
    color: #555;
}
.title::after{
    content:'';
    background: #ff523b;
    width: 80px;
    height: 5px;
    border-radius: 5px;
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}
h4{
    margin-top:8px;
    color: #555;
    font-size: 1.7vmin;
    font-weight: normal;
}
.col-4 p{
    font-size: 14px;
}
.rating .fa{
    color: #ff523b;
}
.col-4:hover{
    transform: translateY(-5px);
}
/*-----------Offer-------------*/
.offer{
    background: radial-gradient(#fff, #F5E1FD);
    margin-top: 80px;
    padding: 30px 0;
}
.offer-img{
    width: 180%;
    height: 130%;
    padding: 100px;
}

small{
    color: #555;
}

/*----------Testimonial--------*/
.testimonial{
    padding-top: 100px;

}
.testimonial .col-3{
    text-align: center;

    padding: 40px 20px;
    box-shadow: 0 0 20px 0px rgba(0,0,0,0.1);
    cursor: pointer;
    transition: transform 0.5s;
}

.fa.fa-quote-left{
    font-size: 34px;
    color: #ff523b;
}
.col-3 p{
    font-size: 17px;
    margin: 12px 0;
    color: #777;
}
.testimonial .col-3 h3{
    font-weight: 600;
    color: #555;
    font-size: 16px;
}
.testimonial .col-3 img{

    width: 50px;
    margin-top: 20px;
    border-radius: 50%;
}

.testimonial .col-3:hover{
    transform: translateY(-10px);
}
/*-----------Brands-------------*/
.brands{
    margin: 100px auto;
}
.brands-logo{
    width: 10px;
}
.brands-logo img{
    width: 100%;
    cursor: pointer;
    filter: grayscale(100%);
}
.brands-logo img:hover{
    filter: grayscale(0);
}
/*-----------Footer-------------*/
.footer{
    background: #000;
    color: #8a8a8a;
    font-size: 14px;
    padding: 60px 0 20px;
}
.footer p{
    color: #8a8a8a;
}
.footer h3{
    color: #fff;
    margin-bottom: 20px;
}
.footer-col-1, .footer-col-2, .footer-col-3, .footer-col-4{
    min-width: 250px;
    margin-bottom: 20px;
}
.footer-col-1{
    flex-basis: 30%;
}
.footer-col-2{
    flex: 1;
    text-align: center;
}
.footer-col-2 img{
    width: 250px;
    margin-top: 10px;
    margin-bottom: 10px;
}
.footer-col-3, .footer-col-4{
    flex-basis: 12%;
    text-align: center;
}
ul{
    list-style-type: none;
}
.app-logo{
    margin-top: 20px;
}
.app-logo img{
    width: 140px;
}
.footer hr{
    border: none;
    background: #b5b5b5;
    height: 1px;
    margin: 10px 0;
}
.copyright{
    text-align: center;
    padding: 10px; 20px;
}

